# point_cluster

./: .gitignore  CMakeLists.txt  README.md
include/: CVC_cluster.h  GuassianProcess.h  basics.h  box.hpp  box_fitting.h  common.hpp  dbgridscan.hpp  obstacle_detector.hpp  processPointClouds.h
include/common/: bounding_box.hpp  color.hpp  geometry.hpp  parameter.hpp  publisher.hpp
include/common/msgs/: autosense_msgs
include/common/types/: feature.hpp  object.hpp  point_types.h  type.h
include/render/: box.h  render.h
src/: GuassianProcess.cpp  box_Fitting.cpp  common.cpp  main.cpp  render.cpp
src/SFND/: processPointClouds.cpp  render.cpp
src/common_lib/include/common/msgs/: autosense_msgs
src/object_builders_lib/: CMakeLists.txt
src/point_cluster/: CMakeLists.txt  package.xml
src/point_cluster/config/: params.yaml
src/point_cluster/include/: CVC.h  CVC_cluster.h  clip.h  detect_object.h
src/point_cluster/include/patchworkpp/: patchworkpp.hpp
src/point_cluster/launch/: demo.launch
src/point_cluster/rviz/: demo.rviz
src/point_cluster/src/: FormatConvert.cpp  clip.cpp  demo.cpp  detect_object.cpp
src/point_cluster/src/CVC/: CVC.cpp
src/visualization/vehicle_model/: CMakeLists.txt
